# OledDisplay

./: .gitignore  CMakeLists.txt  README.MD  displayBuffer.c  displayBuffer.h  font.h  main.c
driver/: CMakeLists.txt  sh1122.c  sh1122.h
scripts/: convertUint16ToUint8.c
src/: bitmapsData.c  bitmapsData.h  dateAndTimeValidation.c  dateAndTimeValidation.h  displayBuffer.c  displayBuffer.h  editTimeDrawingValidation.c  editTimeDrawingValidation.h  font.c  main.c  mainDrawingElements.c  mainDrawingElements.h  moduleInitialization.c  moduleInitialization.h  numberDrawing.c  numberDrawing.h  programLoop.c  programLoop.h  scaling.c  scaling.h
src/driver/: sh1122.c  sh1122.h
